Addition: Get Self Info Endpoint
